@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2023-10-16T08:23:47Z",
+  "timestamp" : "2023-10-16T16:24:17Z",
   "count_outdated" : 542,
   "uniques_outdated" : 257,
-  "count" : 574,
+  "count" : 575,
   "uniques" : 272,
   "clones" : [
     {
@@ -115,9 +115,9 @@
     },
     {
       "timestamp": "2023-10-16T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
+      "count": 2,
+      "count_minmax": [ 1, 2 ],
+      "count_decinc": [ 0, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
