@@ -1,5 +1,5 @@
 {
-  "count": 30,
+  "count": 31,
   "uniques": 3,
   "clones": [
     {
@@ -64,7 +64,7 @@
     },
     {
       "timestamp": "2023-10-16T00:00:00Z",
-      "count": 1,
+      "count": 2,
       "uniques": 1
     }
   ]
